--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame: ^1.34.0
   provider: ^6.1.5+1
   window_manager: ^0.5.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
