--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.5+1
   window_manager: ^0.5.1
   shared_preferences: ^2.5.3
+  flame_audio: ^2.11.12
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/audio/
     - assets/images/carts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
