--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "carrito_run" "\0"
+            VALUE "FileDescription", "Last Drop" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "carrito_run" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "carrito_run.exe" "\0"
-            VALUE "ProductName", "carrito_run" "\0"
+            VALUE "ProductName", "Last Drop" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
